--- a/uscovid19.ipynb
+++ b/uscovid19.ipynb
@@ -1620,14 +1620,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/l0/5wj7kl915m57mtw1g8z_zj080000gn/T/ipykernel_4560/1503749853.py:2: FutureWarning: The default value of numeric_only in DataFrameGroupBy.sum is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "/var/folders/l0/5wj7kl915m57mtw1g8z_zj080000gn/T/ipykernel_4560/1644522340.py:2: FutureWarning: The default value of numeric_only in DataFrameGroupBy.sum is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
       "  df20_sum_by_month = df20.groupby(['month_name', 'month']).sum()\n"
      ]
     }
@@ -1638,10 +1638,10 @@
     "df20_sum_by_month = df20_sum_by_month.reset_index()\n",
     "# sort df20_sum_by_month by month\n",
     "df20_sum_by_month = df20_sum_by_month.sort_values(by=['month'])\n",
-    "df20_sum_by_month = df20_sum_by_month[['month_name', 'death', 'hospitalized', 'positive']]\n",
+    "df20_sum_by_month = df20_sum_by_month[['month_name', 'month', 'death', 'hospitalized', 'positive']]\n",
     "df20_sum_by_month\n",
     "# save to csv\n",
-    "df20_sum_by_month.to_csv('uscovid19_2020_sum_by_month.csv', index=False)"
+    "df20_sum_by_month.to_csv('uscovid19_2020_sum_all.csv', index=False)"
    ]
   },
   {
