first final draft

--- a/uscovid19.ipynb
+++ b/uscovid19.ipynb
@@ -1499,6 +1499,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Alaska', 'Alabama', 'Arkansas', 'American Samoa', 'Arizona',\n",
+       "       'California', 'Colorado', 'Connecticut', 'District of Columbia',\n",
+       "       'Delaware', 'Florida', 'Georgia', 'Guam', 'Hawaii', 'Iowa',\n",
+       "       'Idaho', 'Illinois', 'Indiana', 'Kansas', 'Kentucky', 'Louisiana',\n",
+       "       'Massachusetts', 'Maryland', 'Maine', 'Michigan', 'Minnesota',\n",
+       "       'Missouri', 'Northern Mariana Islands', 'Mississippi', 'Montana',\n",
+       "       'North Carolina', 'North Dakota', 'Nebraska', 'New Hampshire',\n",
+       "       'New Jersey', 'New Mexico', 'Nevada', 'New York', 'Ohio',\n",
+       "       'Oklahoma', 'Oregon', 'Pennsylvania', 'Puerto Rico',\n",
+       "       'Rhode Island', 'South Carolina', 'South Dakota', 'Tennessee',\n",
+       "       'Texas', 'Utah', 'Virginia', 'Virgin Islands', 'Vermont',\n",
+       "       'Washington', 'Wisconsin', 'West Virginia', 'Wyoming'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_states = df20['state_name'].unique()\n",
+    "all_states "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [
